# product-photo-ai-workflows

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  QUICKSTART.vi.md  README.md  README.vi.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: validate.yml
bundles/: README.md  README.vi.md  knowledge-core.md  knowledge-outputs.md  knowledge-products.md  knowledge-styles.md
core/: fast-run.md  product-lock.md  quality-check.md  repair-loop.md  safe-run.md  strict-match.md  workflow-protocol.md
docs/design/: 2026-07-20-google-flow-package-design.md
docs/superpowers/plans/: 2026-07-19-product-photo-ai-workflows.md
examples/sage-minimal-flatlay/: README.md  assembled-prompt.md  lock-sheet.md  qa-report.md
outputs/: _template.md  ecommerce.md  social.md
products/: _template.md  bracelets.md  earrings.md  fabric.md  garments.md  reflective-accessories.md
styles/: _template.md  clean-white-studio.md  dark-luxury-jewelry.md  sage-minimal-flatlay.md  warm-beige-editorial.md
tests/: manual-test-matrix.md  test_bundle_contract.py  test_core_contracts.py  test_governance_contract.py  test_manual_test_contract.py  test_packaging_contract.py  test_platform_packages.py  test_readme_contract.py  test_template_catalog.py  test_validate_templates.py
tests/cases/: bracelets.md  earrings.md  fabric.md  garments.md  reflective-accessories.md
tests/synthetic_cases/: README.md  manifest.md
tools/: build_bundles.py  validate_templates.py
(+1 files in other folders)
