[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "product-photo-ai-workflows"
version = "0.1.0"
description = "Platform-native workflows for faithful AI product photo editing"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0,<7"]
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

